--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="slider">
       <div class="slider-controls">
         <div class="slider-control" onclick="goPrev()">
-          << /div>
+          <</div>
             <div class="slider-control" onclick="goNext()">></div>
         </div>
         <div class="slider-width">
@@ -343,8 +343,8 @@
         </div>
       </div>
       <div class="points-info">
-        <div class="image">
-          <img src="./assets/pontos/outdoor-monte-mor-01.jpg" alt="" />
+        <div class="points-image">
+          <img src="./assets/points/outdoor-monte-mor-01.jpg" alt="" />
         </div>
         <div class="col">
           <div class="col-1">
@@ -363,6 +363,22 @@
           </div>
         </div>
       </div>
+    </div>
+  </section>
+
+
+  <section class="marketing">
+    <div class="marketing-image">
+      <img src="./assets/marketing/hbo-example.webp" alt="">
+    </div>
+    <div class="marketing-infos">
+      <div class="sub-info">
+        <div class="marketing-mark"></div>
+        <div class="marketing-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
+      </div>
+      <div class="sub-info">f</div>
+      <div class="sub-info">f</div>
+      <div class="sub-info">f</div>
     </div>
   </section>
 
