--- a/index.html
+++ b/index.html
@@ -373,12 +373,22 @@
     </div>
     <div class="marketing-infos">
       <div class="sub-info">
-        <div class="marketing-mark"></div>
-        <div class="marketing-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
+        <div class="marketing-mark"><hr></div>
+        <div class="marketing-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit.lorem epsun</div>
       </div>
-      <div class="sub-info">f</div>
-      <div class="sub-info">f</div>
-      <div class="sub-info">f</div>
+      <div class="sub-info">
+        <div class="marketing-mark"><hr></div>
+        <div class="marketing-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit.lorem epsun</div>
+      </div>
+      <div class="sub-info">
+        <div class="marketing-mark"><hr></div>
+        <div class="marketing-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit.lorem epsun
+        </div>
+      </div>
+      <div class="sub-info">
+        <div class="marketing-mark"><hr></div>
+        <div class="marketing-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit.lorem epsun</div>
+      </div>
     </div>
   </section>
 
