--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       </div>
     </section>
 
-    <section class="client-attend" id="client-attend" onclick="clickMenu()">
+    <section class="client-attend" id="client-attend">
       <h2>NOSSOS CLIENTES</h2>
       <div class="client-box">
         <div class="client-brand">
@@ -179,7 +179,7 @@
       </div>
     </section>
 
-    <section class="total-client" id="total-clients" onclick="clickMenu()">
+    <section class="total-client" id="total-clients">
       <h2 class="client-category">TRABALHAMOS QUE REALIZAMOS</h2>
       <div class="client">
         <button class="pre-btn">
