--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="menu-itens">
         <div class="menu-phone">
-          <a href="" target="_blank"
+          <a href="tel:+551932292900" target="_blank"
             ><img src="./assets/menu/phone.svg" alt=""
           /></a>
         </div>
