--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://kit.fontawesome.com/ca14b9e588.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
   <meta name="msapplication-TileColor" content="#ffffff" />
