--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0" />
   <script src="https://kit.fontawesome.com/ca14b9e588.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
   <meta name="msapplication-TileColor" content="#ffffff" />
@@ -74,49 +74,12 @@
         </div>
         <div class="slider-width">
           <div class="slider-item" style="background-image: url('assets/products/example-1.jpg')">
-            <p class="slider-title">
-              Adesivagem <br />
-              de veículos
-            </p>
-            <p class="slider-description">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Similique nihil rerum dolore eius inventore fugit, commodi quae
-              omnis quasi perferendis molestias asperiores at accusamus totam
-              sint. Esse eligendi illum omnis?
-            </p>
           </div>
           <div class="slider-item" style="background-image: url('assets/products/example-2.jpg')">
-            <p class="slider-title">
-              Fachadas <br />
-              iluminadas
-            </p>
-            <p class="slider-description">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Similique nihil rerum dolore eius inventore fugit, commodi quae
-              omnis quasi perferendis molestias asperiores at accusamus totam
-              sint. Esse eligendi illum omnis?
-            </p>
           </div>
           <div class="slider-item" style="background-image: url('assets/products/example-3.jpeg')">
-            <p class="slider-title">Tapetes <br />personalizados</p>
-            <p class="slider-description">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Similique nihil rerum dolore eius inventore fugit, commodi quae
-              omnis quasi perferendis molestias asperiores at accusamus totam
-              sint. Esse eligendi illum omnis?
-            </p>
           </div>
           <div class="slider-item" style="background-image: url('assets/products/example-4.jpeg')">
-            <p class="slider-title">
-              Fachadas <br />
-              personalizadas
-            </p>
-            <p class="slider-description">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Similique nihil rerum dolore eius inventore fugit, commodi quae
-              omnis quasi perferendis molestias asperiores at accusamus totam
-              sint. Esse eligendi illum omnis?
-            </p>
           </div>
         </div>
       </div>
